--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,7 +4,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: step
-        run: python3 --version
+        run: .github/workflows/workflow.sh
 
 name: workflow
 
